--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -2,6 +2,7 @@ includes:
 	- phpstan-baseline.neon
 	- phpstan-disallowed-calls.neon
 parameters:
+  phpVersion: 80100
   level: 5
   bootstrapFiles:
     - .github/workflows/phpstan/autoload.php
